feat:  new Feature Download and View Resume and Loader

--- a/content/sdi-bappenas.mdx
+++ b/content/sdi-bappenas.mdx
@@ -2,7 +2,7 @@
 title: "SDI Bappenas – Website Data Report"
 publishedAt: "2023-12-01"
 description: "A simple and efficient tool designed to help users record, organize, and manage their data with ease. Whether for personal tracking or business purposes, DataLog ensures your information is securely stored and easily accessible whenever you need it."
-image: "/portfolio/burggy.png"
+image: "/portfolio/monitoring.png"
 ---
 
 Pada proyek ini, saya mengembangkan aplikasi web internal untuk kebutuhan pelaporan data di SDI Bappenas. Aplikasi ini dibangun dengan fitur utama seperti sistem autentikasi berbasis token JWT untuk menjaga keamanan akses pengguna.
